add scanning outline
